🐛 fix rotation on mobile

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html {
 	cursor: var(--cursor, grab);
 	overflow: hidden;
 	-webkit-tap-highlight-color: transparent;
+	touch-action: none;
 }
 
 body {
